@@ -6,6 +6,10 @@ List of significant changes to Test::WriteVariants
 
 =cut
 
+=head2 Test::WriteVariants 0.005 - 19th March 2014
+
+  Removed use of autodie.
+
 =head2 Test::WriteVariants 0.004 - 16th March 2014
 
   Treat undef for env var as meaning 'ensure not in %ENV'.
